fix searchbar on small screens

--- a/theme_src/scss/molecules/search.scss
+++ b/theme_src/scss/molecules/search.scss
@@ -1,6 +1,5 @@
 .fieldSearchWrapper {
   display: flex;
-  flex-wrap: wrap;
   align-items: center;
   @extend %mobilePadding;
   input {
