--- a/theme_src/scss/organisms/gridFactsheet.scss
+++ b/theme_src/scss/organisms/gridFactsheet.scss
@@ -36,9 +36,6 @@
   .fsMeasurements {
     grid-column: 1/-1;
     @include smUp {
-      grid-column: span 3;
-    }
-    @include mdUp {
       grid-column: span 2;
     }
   }
@@ -57,6 +54,12 @@
       @include smUp {
         grid-column: span 4;
       }
+    }
+  }
+  .fsQuotation {
+    grid-column: 1/-1;
+    @include smUp {
+      grid-column: span 1;
     }
   }
   .fsExport {
